Prevent share/tweet link text from wrapping

--- a/source/static/stylesheets/components/article.css
+++ b/source/static/stylesheets/components/article.css
@@ -18,6 +18,7 @@
 }
 
 .Article header a {
+    display: inline-block;
     font-size: 1.6rem;
     text-decoration: underline;
 }
